# ESP32-S3_Temperature_and_Humidity_Monitoring_System

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  partitions.csv  sdkconfig  sdkconfig.ci  sdkconfig.old  server.c  test.c
main/: CMakeLists.txt  main.c
